--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    font-size: 15pt;
+    background-color: pink;
 }
 table {
-    text-decoration-color: whitesmoke;
+    background-color: whitesmoke;
 }
