--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
-body {
-    background-color: pink;
-}
+
 table {
-    background-color: whitesmoke;
+    background-color: white;
+    table {
+      width: 80%;
+      margin: auto;
+      border-collapse: collapse;
+      background: black;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px 15px;
+      text-align: center;
+      border: 1px solid black;
+    }
+    th {
+      background-color: #3498db;
+      color: black;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
 }
