--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
-
 table {
-    background-color: white;
-    table {
       width: 80%;
       margin: auto;
       border-collapse: collapse;
-      background: black;
+      background: #FFFFFF;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     th, td {
       padding: 12px 15px;
       text-align: center;
-      border: 1px solid black;
+      border: 1px solid #DDD;
     }
     th {
-      background-color: #3498db;
-      color: black;
-      text-transform: uppercase;
+      background-color: #1E77B7;
+      color: white;
+      text-transform:uppercase;
       letter-spacing: 1px;
     }
-}
+    a {
+      text-decoration: none;
+      color: #3498db;
+      font-weight: bold;
+    }
